<resources>
    <string name="app_name">Health</string>
    <string name="main_title">Samsung Health</string>
    <string name="main_hint">Синхронизировано с Gear S3 в 01:53</string>
    <string name="steps_title">Шаги</string>
    <string name="steps_current" translatable="false">34</string>
    <string name="steps_goal" translatable="false">9 000</string>
    <string name="steps_hint">Все шаги, 02:14</string>
    <string name="steps_percent" translatable="false">0</string>
    <string name="exercise_title">Упражнения</string>
    <string name="exercise_journal">Посмотреть журнал</string>
    <string name="sleep_title">Вы спали?</string>
    <string name="btn_ok" translatable="false">OK</string>
    <string name="sleep_statistic">8 ч. 30 мин. | 02:10 - 10:40</string>
    <string name="steps_slash" translatable="false">/</string>
    <string name="steps_percent_symbol" translatable="false">%</string>
</resources>